# assigment

./: .env  AI_USAGE.md  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.test  Dodo-Backend-Hiring-Assignment_9097150D24_9C2D388F0D_(1)_2B9BB9CFDC_0773E2F3C5.docx  README.md  VIDEO_SCRIPT.md  docker-compose.yml  openapi.yaml  postman_collection.json
migrations/: 001_init.sql
mock-psp/: Cargo.toml
mock-psp/src/: main.rs
src/: errors.rs  extractors.rs  main.rs  response.rs  router.rs
src/config/: database.rs  mod.rs  settings.rs  state.rs
src/db/: customers.rs  invoices.rs  mod.rs  payments.rs
src/middleware/: auth.rs
src/models/: customer.rs  invoice.rs  payment.rs
src/routes/: auth.rs  customers.rs  invoices.rs  mod.rs  payments.rs
src/services/: customer.rs  invoice.rs  mod.rs  payment.rs  psp.rs  webhooks.rs
src/validators/: customer.rs  invoice.rs  mod.rs  payment.rs
src/workers/: webhook.rs
tests/: payment_tests.rs
